src/validation/tests/snapshots/rusty__validation__tests__generic_validation_tests__any_char_does_not_allow_reals.snap
---
source: src/validation/tests/generic_validation_tests.rs
expression: "&diagnostics"
---
error[E062]: Invalid type nature for generic argument. REAL is no ANY_CHAR
  ┌─ <internal>:3:57
  │
3 │         FUNCTION func  : INT VAR x : REAL; END_VAR test(x); END_FUNCTION
  │                                                         ^ Invalid type nature for generic argument. REAL is no ANY_CHAR

error[E062]: Invalid type nature for generic argument. LREAL is no ANY_CHAR
  ┌─ <internal>:4:59
  │
4 │         FUNCTION func1  : INT VAR x : LREAL; END_VAR test(x); END_FUNCTION
  │                                                           ^ Invalid type nature for generic argument. LREAL is no ANY_CHAR
