src/validation/tests/snapshots/rusty__validation__tests__generic_validation_tests__any_chars_does_not_allow_time.snap
---
source: src/validation/tests/generic_validation_tests.rs
expression: "&diagnostics"
---
error[E062]: Invalid type nature for generic argument. TIME is no ANY_CHARS
  ┌─ <internal>:3:58
  │
3 │         FUNCTION func1  : INT VAR x : TIME; END_VAR test(x); END_FUNCTION
  │                                                          ^ Invalid type nature for generic argument. TIME is no ANY_CHARS

error[E062]: Invalid type nature for generic argument. LTIME is no ANY_CHARS
  ┌─ <internal>:4:59
  │
4 │         FUNCTION func2  : INT VAR x : LTIME; END_VAR test(x); END_FUNCTION
  │                                                           ^ Invalid type nature for generic argument. LTIME is no ANY_CHARS
