src/validation/tests/snapshots/rusty__validation__tests__generic_validation_tests__any_date_does_not_allow_reals.snap
---
source: src/validation/tests/generic_validation_tests.rs
expression: make_readable(&diagnostics)
---
SyntaxError { message: "Invalid type nature for generic argument. REAL is no Date.", range: [SourceRange { range: 137..138 }], err_no: type__invalid_nature }
SyntaxError { message: "Invalid type nature for generic argument. LREAL is no Date.", range: [SourceRange { range: 212..213 }], err_no: type__invalid_nature }

